Fix the heading text color and spacing issue

--- a/wp-content/themes/delivering-happiness/assets/sass/pages/_ted.scss
+++ b/wp-content/themes/delivering-happiness/assets/sass/pages/_ted.scss
@@ -32,7 +32,7 @@
             line-height:0px;
         }
         .heading{
-            padding-bottom:10px;
+            padding-bottom:15px;
             display:table;
             margin:0px auto;
             @extend %ohide;
@@ -45,7 +45,7 @@
             @extend %pull-left;
             @extend %relative;
             .tx{
-                top:-21px;
+                top:-24px;
                 left:0px;
                 @extend %absolute;
                 @extend %heading-level-2;
